--- a/themes/apphotography/assets/css/styleZ.css
+++ b/themes/apphotography/assets/css/styleZ.css
@@ -271,7 +271,7 @@ screen and (max-width:40em) {
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     max-width: 100vw;
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 /* ***************************** Slider Styling ***************************** */
